--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="view-login">
+<body class="magazine">
     <div id="root"></div>
 </body>
 
